# ha-hyperhdr

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: lint-test.yml  release.yml  validate.yml
custom_components/hyperhdr/: __init__.py  button.py  camera.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  flow_support.py  light.py  manifest.json  models.py  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/hyperhdr/translations/: en.json
tests/: conftest.py  test_brightness_mapping.py  test_button.py  test_camera.py  test_client_auth.py  test_client_framing.py  test_client_reconnect.py  test_coordinator_instances.py  test_diagnostics.py  test_entity_bases.py  test_entry_setup.py  test_flow_support.py  test_light.py  test_models.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
tests/fixtures/: adjustment_update.json  authorize_token_required.json  components_update.json  components_update_hdr.json  error_response.json  instance_update_stopped.json  ledcolors_ledstream_update.json  priorities_update.json  serverinfo_multi_instance.json  serverinfo_single_instance.json  sysinfo.json  videomodehdr_response.json
