[project]
name = "ha-hyperhdr"
version = "1.0.0"
description = "Home Assistant integration for HyperHDR ambient lighting"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["aiohttp>=3.9.0", "voluptuous>=0.13.1"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TC"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["custom_components/hyperhdr"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
